code/src/objects/Project_Time_Entry_History__c.object
<CustomObject>
    <description>It will store history of Project Timer entry. Each time user stop timer, it will create new entry.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date when Timer is stopped</description>
        <inlineHelpText>Date when Timer is stopped</inlineHelpText>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total amount for a user based on hourly rate. Invoice Amount = hourly rate * total time</description>
        <inlineHelpText>Total amount for a user based on hourly rate. Invoice Amount = hourly rate * total time</inlineHelpText>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Id__c</fullName>
        <formula>Project_Time_Entry__r.Project_Task__r.Project__r.Project_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Record_Id__c</fullName>
        <description>Project Record Id. This will be used while generating the timesheet. it should not display on detail page</description>
        <formula>Project_Time_Entry__r.Project_Task__r.Project__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project Record Id. This will be used while generating the timesheet. it should not display on detail page</inlineHelpText>
        <label>Project Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Time_Entry__c</fullName>
        <description>Related project Time entry</description>
        <inlineHelpText>Related project Time entry</inlineHelpText>
        <label>Project Time Entry</label>
        <referenceTo>Project_Time_Entry__c</referenceTo>
        <relationshipLabel>Project Time Entry Histories</relationshipLabel>
        <relationshipName>Project_Time_Entry_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date when Timer is started</description>
        <inlineHelpText>Date when Timer is started</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent__c</fullName>
        <label>Total Time Spent ( In milliseconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Time Entry History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Project_Time_Entry__c</columns>
        <columns>Total_Time_Spent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTH{00000000}</displayFormat>
        <label>Project Time Entry History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Time Entry Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>